--- a/package.json
+++ b/package.json
@@ -1,1 +1,23 @@
-{ "dependencies": { "cors": "^2.8.5", "dotenv": "^16.3.1", "express": "^4.18.2", "express-rate-limit": "^7.1.3", "mongoose": "^7.6.3" } }
+{
+  "dependencies": {
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.3",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
+    "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.7"
+  },
+  "devDependencies": {
+    "bun-types": "^1.0.7"
+  },
+  "scripts": {
+    "start": "bun --watch src/index.ts",
+    "clean": "rm -rf dist && echo 'Done.'",
+    "build": "",
+    "dev": "ng serve --aot"
+  }
+}
